# DebugBoardUI

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: build_project.yaml
assets/: RealLogo.jpg.png.xcf
src/: Channel.hpp  Types.cpp  Types.hpp  Workspace.cpp  Workspace.hpp  main.cpp
src/datasources/: CMakeLists.txt  DataSource.hpp  Datasource.hpp  DebugBoard.cpp  DebugBoard.hpp  ProgrammingDataSource.cpp  ProgrammingDataSource.hpp
src/platform/: CMakeLists.txt  README.md  glfw_opengl_glue.cpp  glue.hpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/widgets/: CMakeLists.txt  GraphUtils.cpp  GraphUtils.hpp  README.md  RegisteredWidgets.cpp  Widget.cpp  Widget.hpp  WidgetRegistry.cpp  WidgetRegistry.hpp
src/widgets/Connection/: ConnectWidget.cpp  ConnectWidget.hpp
src/widgets/ControlSystems/: PidVizWidget.cpp  PidVizWidget.hpp
src/widgets/Visualization/: FieldMapWidget.cpp  FieldMapWidget.hpp  GenericGrapher.cpp  GenericGrapher.hpp
testserver/: go.mod  main.go
